--- a/video-capture2/package.json
+++ b/video-capture2/package.json
@@ -10,6 +10,7 @@
     "bootstrap": "^5.3.2",
     "csv-parser": "^3.0.0",
     "csv-writer": "^1.6.0",
+    "dotenv": "^16.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.17.0",
