--- a/server/datos.csv.template
+++ b/server/datos.csv.template
@@ -1,1 +1,1 @@
-"First Name","Last Name","Age","Gender","Underlying Condition","Estimated Weight","Height"
+"First Name","Last Name","Age","Gender","Underlying Condition","Estimated Weight","Height","Timestamp"
